# rse-assignment

./: 404.html  README.md  demo.ipynb  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: index.md
notebooks/: demo.ipynb
search/: search_index.json
src/physics_units/: __init__.py  core.py
tests/: test_core.py
